udpate trt test

--- a/trt_inference/trt_test.ipynb
+++ b/trt_inference/trt_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.imgsz : (640, 640)\n",
+      "self.imgsz : (640, 640)\n"
+     ]
+    }
+   ],
    "source": [
     "onnx_predictor = Predictor('../end2end_onnx_2.trt', logger=None, print_log=False)\n",
     "trt_predictor = Predictor('../yolov7-lite-t_end2end.trt', logger=None, print_log=False)"
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "yolo model inference (without preprocess, postprocess)\n",
-      "0.003s (341.543 FPS)\n"
+      "0.003s (366.385 FPS)\n"
      ]
     }
    ],
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f67d7481670>"
+       "<matplotlib.image.AxesImage at 0x7f1aa06ace20>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -108,76 +117,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "onnx_output=onnx_predictor.infer(img)"
+    "yolo_output, nms_result =onnx_predictor.infer(img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ori_output= onnx_output[0].reshape(25200,21)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24151 24108 24136 24085 24085 24085 24085 24085 24085 24085]\n"
+      "(25200, 21)\n",
+      "(30,)\n",
+      "[    0 24085 24108 24136 24151]\n"
      ]
     }
    ],
    "source": [
-    "index=onnx_output[1]\n",
-    "print(index[2::3])"
+    "nkpt=5\n",
+    "yolo_output = yolo_output.reshape(-1, 6+nkpt*3)\n",
+    "print(yolo_output.shape)\n",
+    "print(nms_result.shape)\n",
+    "nms_result_idx = np.unique(nms_result)\n",
+    "print(nms_result_idx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[  36.569275 3575.377   ]\n",
+      "[[  1.6171875   2.1054688   5.6328125   6.4921875]\n",
+      " [190.25      151.25       42.15625    84.8125   ]]\n",
+      "1\n",
+      "[190.25    151.25     42.15625  84.8125 ]\n",
+      "(21,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "yolo_nms = yolo_output[nms_result_idx]\n",
+    "print((yolo_output[nms_result_idx, 2] * yolo_output[nms_result_idx, 3]))\n",
+    "print(yolo_nms[:, :4])\n",
+    "print(np.argmax((yolo_output[nms_result_idx, 2] * yolo_output[nms_result_idx, 3])))\n",
+    "print(yolo_nms[np.argmax((yolo_output[nms_result_idx, 2] * yolo_output[nms_result_idx, 3]))][0:4])\n",
+    "print(yolo_nms[np.argmax((yolo_output[nms_result_idx, 2] * yolo_output[nms_result_idx, 3]))].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nms_result_idx = nms_result_idx[:2]\n",
+    "yolo_nms = yolo_output[nms_result_idx[1:]]\n",
+    "print(yolo_nms.flatten().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([190.25      , 151.25      ,  42.15625   ,  84.8125    ,\n",
+       "         0.75683594,   0.9819336 , 198.75      , 144.5       ,\n",
+       "         0.98535156, 202.        , 145.125     ,   0.984375  ,\n",
+       "       205.875     , 161.75      ,   0.984375  , 192.25      ,\n",
+       "       172.125     ,   0.984375  , 195.        , 173.375     ,\n",
+       "         0.97998047], dtype=float32)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yolo_nms.flatten().flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24151\n",
       "[373.      236.375    40.40625  57.96875]\n",
       "352.796875 207.390625 393.203125 265.359375\n",
+      "24108\n",
       "[269.      150.75     45.09375  64.5625 ]\n",
       "246.453125 118.46875 291.546875 183.03125\n",
+      "24136\n",
       "[505.5     203.       43.34375  74.1875 ]\n",
       "483.828125 165.90625 527.171875 240.09375\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n",
+      "24085\n",
       "[190.25    151.25     42.15625  84.8125 ]\n",
       "169.171875 108.84375 211.328125 193.65625\n"
      ]
     }
    ],
    "source": [
-    "for idx in index[2::3]:\n",
-    "    temp = ori_output[idx][0:4]\n",
-    "    print(ori_output[idx][0:4])\n",
+    "for idx in nms_result[2::3]:\n",
+    "    temp = yolo_output[idx][0:4]\n",
+    "    print(idx)\n",
+    "    print(yolo_output[idx][0:4])\n",
     "    print(temp[0]-temp[2]/2, temp[1]-temp[3]/2 , temp[0]+temp[2]/2, temp[1]+temp[3]/2)"
    ]
   },
